--- a/Doc/readme.css
+++ b/Doc/readme.css
@@ -1,6 +1,4 @@
-﻿.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
+﻿img[alt=Logo] { alignment: center }
+img[alt=Icon] { alignment: center;
+                width: 100px;
+                height: 100px}
